ribbit/tests/ui/arbitrary_nonzero.stderr
error: Nonzero arbitrary sizes are currently unsupported
 --> tests/ui/arbitrary_nonzero.rs:6:21
  |
6 | #[ribbit(size = 15, nonzero)]
  |                     ^^^^^^^
